background stretch fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -447,7 +447,7 @@
 
 @media screen and (max-width: 960px) {
     .services{
-        height: 1800px;
+        height: 1600px;
     }
 
     .services h1{
@@ -458,7 +458,7 @@
 
 @media screen and (max-width: 480px) {
     .services{
-        height: 1800px;
+        height: 2000px;
     }
     .services h1{
         font-size: 1.2rem;
